tests/cases/memory/errors/zone-alloc-zero-sized.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let item = zone::alloc<void>(ref mut zone);
  zone::destroy(zone);
  return 0;
}
